--- a/bundle.yaml
+++ b/bundle.yaml
@@ -5846,7 +5846,23 @@ spec:
                         type: string
                       slackApiUrl:
                         description: Slack Api Url
-                        type: string
+                        properties:
+                          key:
+                            description: The key of the secret to select from.  Must
+                              be a valid secret key.
+                            type: string
+                          name:
+                            description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
+                              TODO: Add other useful fields. apiVersion, kind, uid?'
+                            type: string
+                          optional:
+                            description: Specify whether the Secret or its key must
+                              be defined
+                            type: boolean
+                        required:
+                        - key
+                        type: object
+                        x-kubernetes-map-type: atomic
                     type: object
                   name:
                     description: The name of the AlertmanagerConfig resource which
